changed the header position to fixed and z-index to 1

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -2,6 +2,8 @@ header {
     height: 8vh;
     width: 100%;
     background-color: cornflowerblue;
+    position: fixed;
+    z-index: 1;
     top: 0;
 }
 
